--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 11px; 
+
 }
 .navbar {
     background-color: transparent;
@@ -64,7 +65,6 @@ header{
         flex-direction: column;
         align-content: flex-end;
         height: 55%;
-
 }
 .main-news ul{
     list-style: none;
@@ -80,10 +80,14 @@ header{
 }
 #main-articles{
     margin-left: 2%;
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 #main-articles div{
     height: 50%;
-    width: 80%;
+    width: 480px;
     margin: 1% 6%;
     padding: 2%;
     font-size: 30px;
