--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
 
 }
 @media screen and (min-width: 480px) {
-    .navbar {display:flex}
+    .navbar {display:block}
 }
 .navbar {
     background-color: transparent;
