--- a/css/style.css
+++ b/css/style.css
@@ -2,57 +2,59 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 11px; 
 }
+body h3{
+    margin: 3% 5%;
+    font-size: 30px;
+}
 .navbar {
-    background-color: transparent;
-    height: 20%;
-    width: 100%;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 100;
-    color: rgb(235, 223, 235);
-    display:none;
-    border: maroon groove;
+    background: rgba(17, 17, 16, 0.5);
+    height: 12%;
+
 }
 .navbar ul{
     list-style: none;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: stretch;
 }
 .navbar li{
-    padding: 4%;
-    margin-left: -2%;
-    margin-right: 2%;
-    margin-top: 2%;
-    font-size: 45px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
+    padding: 1%;
+    margin: 1%;
+    border: ridge rgb(235, 223, 235);
+    font-weight: 300;
+    font-size: 25px;
+    color: rgb(235, 223, 235);
+}
+.navbar ul li:link{
+    border: ridge rgb(235, 223, 235);
+    color: rgb(235, 223, 235);
+}
+.navbar ul li:hover{
+    background-color: black;
 }
 header{
     background: url("../images/pexels-burst-373912.jpg") -2100px -550px;
-    height: 1026px;
-    width: 100%;
+    height: 1070px;
+    width: 92%;
     color: whitesmoke;
     font-weight: 300;
-}
-header h2{
-    color: maroon;
-    background: rgba(173, 173, 171, 0.9);
-    margin-bottom: 0%;
-    border-bottom:maroon double;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .title {
     font-size: 60px;
-    height: 400px;
-    display: inline;
+    height: 40%;
+    display: flex;
     margin: 14px;
 }
 .title h1{
     display: inline-flex;
     justify-content: center;
-    font-size: 70px;
-    margin: 0;
-    width:80%;
+    font-size: 65px;
+    margin-top: 1%;
+    width: 100%;
     font-family:"montserrat","piazzolla","raleway";
 }
 .fas fa-bars{
@@ -60,45 +62,50 @@ header h2{
 }
 .title i{
     margin: 2%;
+    display: none;
 }
 .bnews {
+    font-size: 65%;
+    width: 92%;
     background: rgba(173, 173, 171, 0.9);
-    padding: 0% 3%;
+    padding-left: 8%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    color:black
+    color:black;
 }
-.bnews div{
-    width:27%;
-    padding: 3% 0%;
+.bnews h4{
+    font-size: 30px;
+}
+.bnews img{
+    width: 100%;
+}
+.sidebar{
+    margin: 1% 4%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.sidebar div{
+    width:65%;
+    font-size: 15px;
+    font-weight: 200;
+    border-top: 1px solid #808080;
+    padding: 10% 1% 0%;
+}
+.sidebar h2{
+    font-size: 18px;
+    padding: 0% 6%;
+    display: block;
+    width: 80%;
 }
 .main-news {
-    font-size: 35px;
+    font-size: 20px;
     display: flex;
         flex-direction: column;
         align-content: flex-end;
         height: 55%;
 }
-.main-news ul{
-    list-style: none;
-    width: 67%;
-    margin:2%;
-    font-size: 38px;
-    font-weight: 400;
-    color: rgb(230, 243, 243);
-}
-.main-news li {
-    margin: 3%;
-    padding: 3% 0%;
-}
-body h2{
-    font-size: 400%;
-    padding: 0% 6%;
-}
 #main-articles{
-    margin-left: 2%;
+    margin: 2%;
     width: 100%;
     display:flex;
     flex-direction: row;
@@ -107,10 +114,10 @@ body h2{
 }
 #main-articles div{
     height: 50%;
-    width: 480px;
+    width: 360px;
     margin: 0% 0%;
     padding: 2%;
-    font-size: 30px;
+    font-size: 15px;
     text-align: justify;
 }
 #main-articles img{
@@ -153,4 +160,27 @@ body h2{
 }
 .suscription input{
     width: 50%;
+}
+@media screen and (max-width:798px){
+    nav {
+        display: none;
+    }
+    .title i{
+        display: flex;
+        font-size: 35px;
+    }
+    .title h1{
+        font-size: 35px;
+    }
+    #main-articles div {
+        width: 360px;
+        font-size: 20px;
+    }
+    .bnews {
+        flex-direction: column;
+    }
+    .sidebar div{
+        font-size: 20px;
+    }
+
 }
