--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 11px; 
+    font-size: 11px;
+    width: 100%;
+    height: 100%; 
 }
 body h3{
     margin: 3% 5%;
@@ -36,7 +38,7 @@ body h3{
 header{
     background: url("../images/pexels-burst-373912.jpg") -2100px -550px;
     height: 1070px;
-    width: 92%;
+    width: 100%;
     color: whitesmoke;
     font-weight: 300;
     display: flex;
@@ -66,20 +68,23 @@ header{
 }
 .bnews {
     font-size: 65%;
-    width: 92%;
+    width: 100%;
     background: rgba(173, 173, 171, 0.9);
-    padding-left: 8%;
     display: flex;
     color:black;
 }
 .bnews h4{
     font-size: 30px;
+    margin-left: 8%;
 }
 .bnews img{
     width: 100%;
+    margin-left: 8%;
+    margin-right: 5%;
 }
 .sidebar{
     margin: 1% 4%;
+    padding-left: 8%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -152,7 +157,7 @@ header{
     background-color: cadetblue;
     margin: 3%;
     width: 100%;
-    margin: 3%;
+    margin: 3% 0%;
     padding: 1% 0%;
 }
 .suscription label{
